--- a/partials/_cuerpoindex.scss
+++ b/partials/_cuerpoindex.scss
@@ -1,16 +1,16 @@
-.general {
+#general {
     background-image: url(../imagenes/portada/portadaSalta.jpg);
-
     background-size: 1500px;
+    height: 100%;
 }
 
     #saludo {
-background-color: blanchedalmond;
+background-color: rgb(9, 5, 10);
 opacity: 50%;
      
     }
 h1 {
-    color: rgb(35, 4, 94);
+    color: #fafafa;
     font-family: sans-serif;
     font-size: 40px;
     text-align: center;
