--- a/partials/styles.css
+++ b/partials/styles.css
@@ -1,15 +1,16 @@
-.general {
+#general {
   background-image: url(../imagenes/portada/portadaSalta.jpg);
   background-size: 1500px;
+  height: 100%;
 }
 
 #saludo {
-  background-color: blanchedalmond;
+  background-color: rgb(9, 5, 10);
   opacity: 50%;
 }
 
 h1 {
-  color: rgb(35, 4, 94);
+  color: #fafafa;
   font-family: sans-serif;
   font-size: 40px;
   text-align: center;
@@ -25,4 +26,37 @@ h1 {
   justify-content: center;
   position: absolute;
   top: 150px;
+}
+
+.eleccion {
+  display: flex;
+  justify-content: space-around;
+}
+
+.navbar {
+  background-color: rgb(33, 97, 140);
+  height: 120px;
+}
+.navbar .logo {
+  height: 100px;
+  width: 100px;
+  transition: all 2s;
+}
+.navbar .logo:hover {
+  transform: scale(1.3);
+}
+.navbar .navbar-brand {
+  margin: 10px;
+  font-size: 40px;
+}
+.navbar .navbar-brand p {
+  font-size: 22px;
+}
+.navbar .nav-item {
+  font-size: 20px;
+  transition: all 1s;
+}
+.navbar .nav-item:hover {
+  transform: scale(1.2);
+  color: white;
 }/*# sourceMappingURL=styles.css.map */
