--- a/partials/styles.css
+++ b/partials/styles.css
@@ -28,6 +28,11 @@ h1 {
   top: 150px;
 }
 
+#mes {
+  display: flex;
+  justify-content: space-around;
+}
+
 .eleccion {
   display: flex;
   justify-content: space-around;
