--- a/partials/_cuerpoindex.scss
+++ b/partials/_cuerpoindex.scss
@@ -1,23 +1,27 @@
 #general {
     background-image: url(../imagenes/portada/portadaSalta.jpg);
-    background-size: 1500px;
+    background-size: 100%;
     height: 100%;
 }
 
-    #saludo {
-background-color: rgb(9, 5, 10);
-opacity: 50%;
-     
-    }
-h1 {
-    color: #fafafa;
+#saludo {
+    display: flex;
+    height: 250px;
+    align-items: center;
+    background-color: rgb(9, 5, 10);
+    opacity: 50%;
+
+}
+
+#mensaje {
+    color: white;
     font-family: sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     text-align: center;
 }
 
 .container {
- 
+
     height: 500px;
     position: relative;
 
@@ -30,4 +34,38 @@ h1 {
     top: 150px;
 
 
+}
+
+#saludoInicial {
+    color: white;
+    display: flex;
+    height: 150px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(9, 5, 10);
+    opacity: 70%;
+}
+
+#saludoInicial2{
+    color: white;
+    display: flex;
+    height: 150px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(9, 5, 10);
+    opacity: 70%;
+}
+
+#botonElegirDestino{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    height: 100px;
+   
+}
+
+#aaa{
+    color: black;
+    font-size: 20px;
 }
