--- a/partials/styles.css
+++ b/partials/styles.css
@@ -1,18 +1,21 @@
 #general {
   background-image: url(../imagenes/portada/portadaSalta.jpg);
-  background-size: 1500px;
+  background-size: 100%;
   height: 100%;
 }
 
 #saludo {
+  display: flex;
+  height: 250px;
+  align-items: center;
   background-color: rgb(9, 5, 10);
   opacity: 50%;
 }
 
-h1 {
-  color: #fafafa;
+#mensaje {
+  color: white;
   font-family: sans-serif;
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
 }
 
@@ -26,6 +29,39 @@ h1 {
   justify-content: center;
   position: absolute;
   top: 150px;
+}
+
+#saludoInicial {
+  color: white;
+  display: flex;
+  height: 150px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(9, 5, 10);
+  opacity: 70%;
+}
+
+#saludoInicial2 {
+  color: white;
+  display: flex;
+  height: 150px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(9, 5, 10);
+  opacity: 70%;
+}
+
+#botonElegirDestino {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  height: 100px;
+}
+
+#aaa {
+  color: black;
+  font-size: 20px;
 }
 
 #epoca {
@@ -46,6 +82,10 @@ h1 {
 #excursiones {
   display: flex;
   justify-content: space-around;
+}
+
+#titulo2 {
+  color: black;
 }
 
 .navbar {
