--- a/partials/_pago.scss
+++ b/partials/_pago.scss
@@ -2,3 +2,8 @@
     background-image: url(../imagenes/fondos/-Jujuy-Province.jpg);
     background-size: 1500px;
 }
+#formaDePagoelegida{
+    background-color: rgb(116, 116, 141);
+    display: flex;
+    justify-content: center;
+}
