--- a/partials/_excursiones.scss
+++ b/partials/_excursiones.scss
@@ -8,3 +8,20 @@
 #titulo2{
     color: black;
 }
+
+#generalExcursiones{
+    background-image: url(../imagenes/fondos/catamarcaRes.jpg);
+    background-size: 1500px;
+    height: 1000px;
+}
+
+#boton2{
+    display: flex;
+    justify-content: flex-start;
+}
+
+#tirulo3{
+ background-color: black ;
+ height: 50px;
+ margin: 20px;
+}
