se completa el codigo para entrega

--- a/partials/_pago.scss
+++ b/partials/_pago.scss
@@ -7,3 +7,8 @@
     display: flex;
     justify-content: center;
 }
+#divDolar{
+    display: flex;
+    justify-content: end;
+    background-color: aliceblue;
+}
